# encryption_tool

./: .gitignore  README.md  build_app.sh  pyproject.toml  requirements.txt
.planning/: PROJECT.md
src/: __init__.py  __main__.py  cli.py
src/crypto/: __init__.py  encryptor.py  key_derivation.py
src/gui/: __init__.py  __main__.py  main_window.py  password_dialog.py
tests/: __init__.py  test_cli.py  test_encryptor.py  test_key_derivation.py
